<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_form_user_preference"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.FormUserPreferenceFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:autofillHints="name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nim"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="nim"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_prodi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prodi"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="prodi"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/faculty"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="faculty"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/universitas"
            android:inputType="text"
            android:maxLines="1"
            android:autofillHints="university"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:autofillHints="emailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_save"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>