<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/coffee"
        android:contentDescription="@string/coffee"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:fontFamily="@font/poppins_light"
        android:textAlignment="center"
        android:text="@string/coffee_shop_description" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:text="@string/app_desc" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="26sp"
        android:layout_marginBottom="80dp"
        android:text="@string/get_started"
        />

</androidx.constraintlayout.widget.ConstraintLayout>